# data_collaboration

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: 0410_integ_DC_FL_fashion-mnist.ipynb  0412_anna_DC_FL_FashionMnist.ipynb  0412_anna_DC_FL_fashion-mnist.ipynb  0423_Figures.ipynb  Figures.ipynb  tests.ipynb  utils.py
notebooks/.ipynb_checkpoints/: 0412_anna_DC_FL_FashionMnist-checkpoint.ipynb  Figures-checkpoint.ipynb
save/logs/: dc_fashion_mnist_mlp_100ndat_50_dim.txt  dc_fashion_mnist_mlp_500anc_50_dim_10users_iid[1]_10run.txt  dc_fashion_mnist_svm_500anc_50_dim_10users_iid[1]_10run.txt  dc_mnist_cnn1d_500anc_50_dim_10users_iid[1]_10run.txt  dc_mnist_knn_100anc_50_dim_10users_iid[1]_5run.txt  dc_mnist_knn_100ndat_50_dim_10_10run.txt  dc_mnist_knn_500anc_50_dim_10users_iid[1]_10run.txt  dc_mnist_knn_500anc_50_dim_10users_iid[1]_5run.txt  dc_mnist_knn_50ndat_50_dim_10_10run.txt  dc_mnist_mlp_100ndat_25_dim.txt  dc_mnist_mlp_100ndat_50_dim.txt  dc_mnist_mlp_100ndat_50_dim_10_10run.txt  dc_mnist_mlp_500anc_50_dim_10users_iid[1]_10run.txt  dc_mnist_mlp_50ndat_50_dim_10_10run.txt  dc_mnist_svm_100ndat_50_dim_10_10run.txt  dc_mnist_svm_500anc_50_dim_10users_iid[1]_10run.txt  dc_mnist_svm_50ndat_50_dim_10_10run.txt  fed_mnist_mlp_100ndat_50_dim.txt  fed_mnist_mlp_50ndat_50_dim.txt
save/papers/: ndat.csv  user.csv
src/: dc_main.py  dc_ndat.py  dc_params.py  dc_utils.py  fed_dc_main.py  fed_dc_params_ndat.py  fed_dc_params_num_users.py  fed_main.py  fed_ndat.py  models.py  options.py  sampling.py  utils.py
