[tool.poetry]
name = "data-collaboration"
version = "0.1.0"
description = ""
authors = ["Akie"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.46.0"
keras = "^2.2.4"
seaborn = "^0.10.1"
scikit-learn = "^0.23.0"
matplotlib = "^3.2.1"
scipy = "^1.4.1"
tensorflow = "^2.2.0"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
jupyter = "^1.0.0"
plotly = "^4.7.1"
jupyter-nbextensions-configurator = "^0.4.1"
jupyter-contrib-nbextensions = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
